Fix desktop-left-group z-index to render above space background canvas

--- a/src/styles/desktop.css
+++ b/src/styles/desktop.css
@@ -46,6 +46,8 @@
     flex-shrink: 0;
     align-self: flex-end;
     margin-bottom: 20vh;
+    position: relative;
+    z-index: 1;
   }
 
   .desktop-left {
